# MedMig

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 284ef6d6fd9d_initial_schema.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: abha.py  auth.py  chat.py  documents.py  family.py  health.py  records.py  websocket.py
app/core/: security.py
app/models/: __init__.py  chat_job.py  chat_session.py  document.py  family_member.py  file_attachment.py  health_metric.py  message.py  notification.py  share_link.py  user.py
app/schemas/: abha.py  chat.py  document.py  family_member.py  health.py  user.py
app/services/: abdm_service.py  ai_service.py  chat_service.py  document_service.py  embedding_service.py  health_service.py  tts_service.py
scripts/: download_models.py
