[project]
name = "litert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "litert-lm>=0.10.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
